# Copyright (c) 2023 The Qorai Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//qorai/components/web_discovery/buildflags/buildflags.gni")
import("//qorai/components/webcompat_reporter/buildflags/buildflags.gni")
import("//build/config/android/rules.gni")

declare_args() {
  qorai_android_developer_options_code = ""
}

java_cpp_enum("qorai_android_java_enums_srcjar") {
  sources = [
    "//qorai/chromium_src/chrome/browser/notifications/notification_handler_impl.h",
    "//qorai/components/decentralized_dns/core/constants.h",
  ]
}

java_cpp_template("qorai_config_java") {
  sources = [ "//qorai/build/android/java/templates/QoraiConfig.template" ]
  defines = [
    "QORAI_ANDROID_DEVELOPER_OPTIONS_CODE=\"$qorai_android_developer_options_code\"",
    "QORAI_ANDROID_WEBCOMPAT_REPORT_ENDPOINT=\"$webcompat_report_api_endpoint\"",
    "QORAI_ANDROID_WEB_DISCOVERY_ENABLED=$enable_web_discovery_native",
  ]
}

# Qorai-specific resources.
android_resources("java_resources") {
  sources = [
    "java/qorai-res/anim/slide_in_bottom.xml",
    "java/qorai-res/anim/slide_in_top.xml",
    "java/qorai-res/anim/slide_out_bottom.xml",
    "java/qorai-res/anim/slide_out_top.xml",
    "java/qorai-res/color/qorai_switch_stroke_color.xml",
    "java/qorai-res/color/crypto_wallet_onboarding_button_text_color.xml",
    "java/qorai-res/color/wallet_checkbox_background_color_selector.xml",
    "java/qorai-res/color/wallet_checkbox_color_selector.xml",
    "java/qorai-res/color/wallet_onboarding_input_field_stroke_color.xml",
    "java/qorai-res/color/wallet_onboarding_network_item_stroke_selector.xml",
    "java/qorai-res/drawable-hdpi/qorai_ads_launch_graphic.png",
    "java/qorai-res/drawable-hdpi/qorai_sync_btn_laptop.png",
    "java/qorai-res/drawable-hdpi/btn_qor.png",
    "java/qorai-res/drawable-hdpi/btn_bookmark.png",
    "java/qorai-res/drawable-hdpi/btn_bookmark_fill.png",
    "java/qorai-res/drawable-hdpi/btn_qorai.png",
    "java/qorai-res/drawable-hdpi/btn_qorai_off.png",
    "java/qorai-res/drawable-hdpi/btn_mic.png",
    "java/qorai-res/drawable-hdpi/camera.png",
    "java/qorai-res/drawable-hdpi/check.png",
    "java/qorai-res/drawable-hdpi/checkbox.png",
    "java/qorai-res/drawable-hdpi/copy_paste.png",
    "java/qorai-res/drawable-hdpi/ic_ad_free_videos.png",
    "java/qorai-res/drawable-hdpi/ic_qorai_onboarding.png",
    "java/qorai-res/drawable-hdpi/ic_onboarding_bottom_leaf.png",
    "java/qorai-res/drawable-hdpi/ic_onboarding_top_leaf.png",
    "java/qorai-res/drawable-hdpi/share_activity_background.png",
    "java/qorai-res/drawable-mdpi/qorai_ads_launch_graphic.png",
    "java/qorai-res/drawable-mdpi/qorai_sync_btn_laptop.png",
    "java/qorai-res/drawable-mdpi/btn_qor.png",
    "java/qorai-res/drawable-mdpi/btn_bookmark.png",
    "java/qorai-res/drawable-mdpi/btn_bookmark_fill.png",
    "java/qorai-res/drawable-mdpi/btn_qorai.png",
    "java/qorai-res/drawable-mdpi/btn_qorai_off.png",
    "java/qorai-res/drawable-mdpi/btn_mic.png",
    "java/qorai-res/drawable-mdpi/camera.png",
    "java/qorai-res/drawable-mdpi/check.png",
    "java/qorai-res/drawable-mdpi/checkbox.png",
    "java/qorai-res/drawable-mdpi/copy_paste.png",
    "java/qorai-res/drawable-mdpi/ic_ad_free_videos.png",
    "java/qorai-res/drawable-mdpi/ic_qorai_onboarding.png",
    "java/qorai-res/drawable-mdpi/ic_onboarding_bottom_leaf.png",
    "java/qorai-res/drawable-mdpi/ic_onboarding_top_leaf.png",
    "java/qorai-res/drawable-mdpi/share_activity_background.png",
    "java/qorai-res/drawable-night-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
    "java/qorai-res/drawable-night-nodpi/widget_preview.png",
    "java/qorai-res/drawable-night/bookmark_empty_state_illustration.xml",
    "java/qorai-res/drawable-night/ellipse_217.xml",
    "java/qorai-res/drawable-night/history_empty_state_illustration.xml",
    "java/qorai-res/drawable-night/ic_vpn_always_on_1.xml",
    "java/qorai-res/drawable-night/ic_vpn_always_on_2.xml",
    "java/qorai-res/drawable-night/ic_vpn_always_on_3.xml",
    "java/qorai-res/drawable-night/ic_youtube_skip_ads.xml",
    "java/qorai-res/drawable-night/incognito_history_placeholder_image.xml",
    "java/qorai-res/drawable-night/new_wallet.xml",
    "java/qorai-res/drawable-night/phone_recent_tab_empty_state_illustration.xml",
    "java/qorai-res/drawable-night/reading_list_empty_state_illustration.xml",
    "java/qorai-res/drawable-night/restore_wallet.xml",
    "java/qorai-res/drawable-night/tablet_recent_tab_empty_state_illustration.xml",
    "java/qorai-res/drawable-night/wallet_portfolio.xml",
    "java/qorai-res/drawable-nodpi/dylan_malval_sea_min.webp",
    "java/qorai-res/drawable-nodpi/eth.png",
    "java/qorai-res/drawable-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
    "java/qorai-res/drawable-xhdpi/qorai_ads_launch_graphic.png",
    "java/qorai-res/drawable-xhdpi/qorai_sync_btn_laptop.png",
    "java/qorai-res/drawable-xhdpi/btn_qor.png",
    "java/qorai-res/drawable-xhdpi/btn_bookmark.png",
    "java/qorai-res/drawable-xhdpi/btn_bookmark_fill.png",
    "java/qorai-res/drawable-xhdpi/btn_qorai.png",
    "java/qorai-res/drawable-xhdpi/btn_qorai_off.png",
    "java/qorai-res/drawable-xhdpi/btn_mic.png",
    "java/qorai-res/drawable-xhdpi/camera.png",
    "java/qorai-res/drawable-xhdpi/check.png",
    "java/qorai-res/drawable-xhdpi/checkbox.png",
    "java/qorai-res/drawable-xhdpi/copy_paste.png",
    "java/qorai-res/drawable-xhdpi/ic_ad_free_videos.png",
    "java/qorai-res/drawable-xhdpi/ic_qorai_onboarding.png",
    "java/qorai-res/drawable-xhdpi/ic_onboarding_bottom_leaf.png",
    "java/qorai-res/drawable-xhdpi/ic_onboarding_top_leaf.png",
    "java/qorai-res/drawable-xhdpi/share_activity_background.png",
    "java/qorai-res/drawable-xxhdpi/qorai_ads_launch_graphic.png",
    "java/qorai-res/drawable-xxhdpi/qorai_sync_btn_laptop.png",
    "java/qorai-res/drawable-xxhdpi/btn_qor.png",
    "java/qorai-res/drawable-xxhdpi/btn_bookmark.png",
    "java/qorai-res/drawable-xxhdpi/btn_bookmark_fill.png",
    "java/qorai-res/drawable-xxhdpi/btn_qorai.png",
    "java/qorai-res/drawable-xxhdpi/btn_qorai_off.png",
    "java/qorai-res/drawable-xxhdpi/btn_mic.png",
    "java/qorai-res/drawable-xxhdpi/camera.png",
    "java/qorai-res/drawable-xxhdpi/check.png",
    "java/qorai-res/drawable-xxhdpi/checkbox.png",
    "java/qorai-res/drawable-xxhdpi/copy_paste.png",
    "java/qorai-res/drawable-xxhdpi/ic_ad_free_videos.png",
    "java/qorai-res/drawable-xxhdpi/ic_qorai_onboarding.png",
    "java/qorai-res/drawable-xxhdpi/ic_onboarding_bottom_leaf.png",
    "java/qorai-res/drawable-xxhdpi/ic_onboarding_top_leaf.png",
    "java/qorai-res/drawable-xxhdpi/share_activity_background.png",
    "java/qorai-res/drawable-xxxhdpi/qorai_ads_launch_graphic.png",
    "java/qorai-res/drawable-xxxhdpi/qorai_sync_btn_laptop.png",
    "java/qorai-res/drawable-xxxhdpi/btn_qor.png",
    "java/qorai-res/drawable-xxxhdpi/btn_bookmark.png",
    "java/qorai-res/drawable-xxxhdpi/btn_bookmark_fill.png",
    "java/qorai-res/drawable-xxxhdpi/btn_qorai.png",
    "java/qorai-res/drawable-xxxhdpi/btn_qorai_off.png",
    "java/qorai-res/drawable-xxxhdpi/btn_mic.png",
    "java/qorai-res/drawable-xxxhdpi/camera.png",
    "java/qorai-res/drawable-xxxhdpi/check.png",
    "java/qorai-res/drawable-xxxhdpi/checkbox.png",
    "java/qorai-res/drawable-xxxhdpi/copy_paste.png",
    "java/qorai-res/drawable-xxxhdpi/ic_ad_free_videos.png",
    "java/qorai-res/drawable-xxxhdpi/ic_qorai_onboarding.png",
    "java/qorai-res/drawable-xxxhdpi/ic_onboarding_bottom_leaf.png",
    "java/qorai-res/drawable-xxxhdpi/ic_onboarding_top_leaf.png",
    "java/qorai-res/drawable-xxxhdpi/share_activity_background.png",
    "java/qorai-res/drawable/ad_free_card_bg.xml",
    "java/qorai-res/drawable/add_custom_filter_button_background_disabled.xml",
    "java/qorai-res/drawable/add_custom_filter_button_background_selector.xml",
    "java/qorai-res/drawable/add_widget_button.xml",
    "java/qorai-res/drawable/ads_custom_notification_border.xml",
    "java/qorai-res/drawable/ads_custom_notification_border_dark.xml",
    "java/qorai-res/drawable/always_on_tab_dot.xml",
    "java/qorai-res/drawable/always_on_tab_selected_dot.xml",
    "java/qorai-res/drawable/always_on_tab_selector.xml",
    "java/qorai-res/drawable/always_on_tutorial_action_bg.xml",
    "java/qorai-res/drawable/antenna_layer_list.xml",
    "java/qorai-res/drawable/bar_chart.xml",
    "java/qorai-res/drawable/qor_ads_logo_button.xml",
    "java/qorai-res/drawable/blue_48_rounded_bg.xml",
    "java/qorai-res/drawable/blue_rounded_notification_bg.xml",
    "java/qorai-res/drawable/bookmark_menu_bg.xml",
    "java/qorai-res/drawable/qorai_checkbox.xml",
    "java/qorai-res/drawable/qorai_icon_search.xml",
    "java/qorai-res/drawable/qorai_menu_bookmarks.xml",
    "java/qorai-res/drawable/qorai_menu_downloads.xml",
    "java/qorai-res/drawable/qorai_menu_exit.xml",
    "java/qorai-res/drawable/qorai_menu_history.xml",
    "java/qorai-res/drawable/qorai_menu_new_private_tab.xml",
    "java/qorai-res/drawable/qorai_menu_recent_tabs.xml",
    "java/qorai-res/drawable/qorai_menu_rewards.xml",
    "java/qorai-res/drawable/qorai_menu_set_as_default.xml",
    "java/qorai-res/drawable/qorai_menu_settings.xml",
    "java/qorai-res/drawable/qorai_modern_toolbar_text_box_background.xml",
    "java/qorai-res/drawable/qorai_new_group_tab.xml",
    "java/qorai-res/drawable/qorai_news_settings_list_divider.xml",
    "java/qorai-res/drawable/qorai_news_settings_publisher_bg.xml",
    "java/qorai-res/drawable/qorai_news_settings_search_bg.xml",
    "java/qorai-res/drawable/qorai_news_settings_unfollow_bg.xml",
    "java/qorai-res/drawable/qorai_notification_permission_rationale_dialog_header.xml",
    "java/qorai-res/drawable/qorai_privacy_tabs_unlock_image.xml",
    "java/qorai-res/drawable/qorai_rating_emoji_bg.xml",
    "java/qorai-res/drawable/qorai_rating_rate_now_bg.xml",
    "java/qorai-res/drawable/qorai_rewards_circle.xml",
    "java/qorai-res/drawable/qorai_rewards_rectangle.xml",
    "java/qorai-res/drawable/qorai_shields_tooltip_text_bg.xml",
    "java/qorai-res/drawable/qorai_stats_radio_button_normal.xml",
    "java/qorai-res/drawable/qorai_stats_radio_button_selected.xml",
    "java/qorai-res/drawable/qorai_stats_radio_button_selector.xml",
    "java/qorai-res/drawable/qorai_stats_radio_group_bg.xml",
    "java/qorai-res/drawable/qorai_stats_rounded_bg.xml",
    "java/qorai-res/drawable/qorai_stats_ui_empty_bg.xml",
    "java/qorai-res/drawable/qorai_sync.xml",
    "java/qorai-res/drawable/qorai_sync_btn.xml",
    "java/qorai-res/drawable/qorai_sync_btn_mobile.xml",
    "java/qorai-res/drawable/qorai_sync_btn_transparent.xml",
    "java/qorai-res/drawable/qorai_sync_cover_general.xml",
    "java/qorai-res/drawable/qorai_sync_image_btn.xml",
    "java/qorai-res/drawable/qorai_sync_qr_rounded.xml",
    "java/qorai-res/drawable/qorai_sync_tab_indicator.xml",
    "java/qorai-res/drawable/qorai_sync_tab_layout_bg.xml",
    "java/qorai-res/drawable/qorai_sync_top_rounded.xml",
    "java/qorai-res/drawable/qorai_sync_top_rounded_light.xml",
    "java/qorai-res/drawable/browser_group.xml",
    "java/qorai-res/drawable/btn_right_tablet.xml",
    "java/qorai-res/drawable/card_bg.xml",
    "java/qorai-res/drawable/circular_progress.xml",
    "java/qorai-res/drawable/country_spinner_background.xml",
    "java/qorai-res/drawable/create_custom_filter_edit_bg.xml",
    "java/qorai-res/drawable/crypto_wallet_blue_button.xml",
    "java/qorai-res/drawable/crypto_wallet_hollow_button.xml",
    "java/qorai-res/drawable/crypto_wallet_onboarding_blue_button.xml",
    "java/qorai-res/drawable/dapps_permission_dialog_background.xml",
    "java/qorai-res/drawable/default_dot.xml",
    "java/qorai-res/drawable/default_indicator.xml",
    "java/qorai-res/drawable/ellipse_217.xml",
    "java/qorai-res/drawable/email_shield.xml",
    "java/qorai-res/drawable/file_download.xml",
    "java/qorai-res/drawable/file_upload.xml",
    "java/qorai-res/drawable/fingerprint_unlock_layer_list.xml",
    "java/qorai-res/drawable/ic_accessibility.xml",
    "java/qorai-res/drawable/ic_addresses.xml",
    "java/qorai-res/drawable/ic_always_on_info.xml",
    "java/qorai-res/drawable/ic_antenna.xml",
    "java/qorai-res/drawable/ic_appearance.xml",
    "java/qorai-res/drawable/ic_arb_color.xml",
    "java/qorai-res/drawable/ic_arrow_clock.xml",
    "java/qorai-res/drawable/ic_arrow_down_circular_filled.xml",
    "java/qorai-res/drawable/ic_arrow_down_circular_filled_transparent.xml",
    "java/qorai-res/drawable/ic_arrow_forward.xml",
    "java/qorai-res/drawable/ic_arrow_left_right_directions.xml",
    "java/qorai-res/drawable/ic_aurora_color.xml",
    "java/qorai-res/drawable/ic_autofill.xml",
    "java/qorai-res/drawable/ic_avax_color.xml",
    "java/qorai-res/drawable/ic_back.xml",
    "java/qorai-res/drawable/ic_baseline_add_24.xml",
    "java/qorai-res/drawable/ic_baseline_arrow_back_24.xml",
    "java/qorai-res/drawable/ic_baseline_close_24.xml",
    "java/qorai-res/drawable/ic_basic_check.xml",
    "java/qorai-res/drawable/ic_bell_icon.xml",
    "java/qorai-res/drawable/ic_biometric_login.xml",
    "java/qorai-res/drawable/ic_bnbchain_color.xml",
    "java/qorai-res/drawable/ic_bookmark_import_export_failed.xml",
    "java/qorai-res/drawable/ic_bookmark_import_export_success.xml",
    "java/qorai-res/drawable/ic_bookmark_menu_add.xml",
    "java/qorai-res/drawable/ic_bookmark_menu_delete.xml",
    "java/qorai-res/drawable/ic_bookmark_menu_edit.xml",
    "java/qorai-res/drawable/ic_bookmark_menu_view.xml",
    "java/qorai-res/drawable/ic_qorai.xml",
    "java/qorai-res/drawable/ic_qorai_36.xml",
    "java/qorai-res/drawable/ic_qorai_ai.xml",
    "java/qorai-res/drawable/ic_qorai_battery.xml",
    "java/qorai-res/drawable/ic_qorai_logo.xml",
    "java/qorai-res/drawable/ic_qorai_mobiledata.xml",
    "java/qorai-res/drawable/ic_qorai_news_no_source.xml",
    "java/qorai-res/drawable/ic_qorai_notification.xml",
    "java/qorai-res/drawable/ic_qorai_password.xml",
    "java/qorai-res/drawable/ic_qorai_smiley_happy.xml",
    "java/qorai-res/drawable/ic_qorai_smiley_sad.xml",
    "java/qorai-res/drawable/ic_qorai_vpn_graphic.xml",
    "java/qorai-res/drawable/ic_browser_customizable_shortcut.xml",
    "java/qorai-res/drawable/ic_browser_mobile_tabs.xml",
    "java/qorai-res/drawable/ic_browser_mobile_tabs_bottom.xml",
    "java/qorai-res/drawable/ic_browser_mobile_tabs_top.xml",
    "java/qorai-res/drawable/ic_btc_color.xml",
    "java/qorai-res/drawable/ic_cancel_filled.xml",
    "java/qorai-res/drawable/ic_carat_down.xml",
    "java/qorai-res/drawable/ic_carat_down_country_spinner.xml",
    "java/qorai-res/drawable/ic_carat_right.xml",
    "java/qorai-res/drawable/ic_card_background.xml",
    "java/qorai-res/drawable/ic_celo_color.xml",
    "java/qorai-res/drawable/ic_channel_qorai.xml",
    "java/qorai-res/drawable/ic_channel_business.xml",
    "java/qorai-res/drawable/ic_channel_cars.xml",
    "java/qorai-res/drawable/ic_channel_crypto.xml",
    "java/qorai-res/drawable/ic_channel_culture.xml",
    "java/qorai-res/drawable/ic_channel_default.xml",
    "java/qorai-res/drawable/ic_channel_entertainment.xml",
    "java/qorai-res/drawable/ic_channel_fashion.xml",
    "java/qorai-res/drawable/ic_channel_filmtv.xml",
    "java/qorai-res/drawable/ic_channel_food.xml",
    "java/qorai-res/drawable/ic_channel_fun.xml",
    "java/qorai-res/drawable/ic_channel_gaming.xml",
    "java/qorai-res/drawable/ic_channel_health.xml",
    "java/qorai-res/drawable/ic_channel_home.xml",
    "java/qorai-res/drawable/ic_channel_music.xml",
    "java/qorai-res/drawable/ic_channel_politics.xml",
    "java/qorai-res/drawable/ic_channel_science.xml",
    "java/qorai-res/drawable/ic_channel_sports.xml",
    "java/qorai-res/drawable/ic_channel_tech_reviews.xml",
    "java/qorai-res/drawable/ic_channel_technology.xml",
    "java/qorai-res/drawable/ic_channel_top_news.xml",
    "java/qorai-res/drawable/ic_channel_travel.xml",
    "java/qorai-res/drawable/ic_channel_us_news.xml",
    "java/qorai-res/drawable/ic_channel_weather.xml",
    "java/qorai-res/drawable/ic_channel_world_news.xml",
    "java/qorai-res/drawable/ic_channels.xml",
    "java/qorai-res/drawable/ic_check.xml",
    "java/qorai-res/drawable/ic_check_white.xml",
    "java/qorai-res/drawable/ic_checkbox_filled.xml",
    "java/qorai-res/drawable/ic_checkbox_outline.xml",
    "java/qorai-res/drawable/ic_checkmark_gradient.xml",
    "java/qorai-res/drawable/ic_chevron_right.xml",
    "java/qorai-res/drawable/ic_circle_down.xml",
    "java/qorai-res/drawable/ic_circle_news_settings.xml",
    "java/qorai-res/drawable/ic_clock.xml",
    "java/qorai-res/drawable/ic_close.xml",
    "java/qorai-res/drawable/ic_closing_all_closes_qorai.xml",
    "java/qorai-res/drawable/ic_coinbase.xml",
    "java/qorai-res/drawable/ic_crypto_wallets.xml",
    "java/qorai-res/drawable/ic_custom_tabs.xml",
    "java/qorai-res/drawable/ic_disabled.xml",
    "java/qorai-res/drawable/ic_discount.xml",
    "java/qorai-res/drawable/ic_downloads.xml",
    "java/qorai-res/drawable/ic_drag.xml",
    "java/qorai-res/drawable/ic_edit_pencil.xml",
    "java/qorai-res/drawable/ic_eth.xml",
    "java/qorai-res/drawable/ic_eth_24.xml",
    "java/qorai-res/drawable/ic_eth_color.xml",
    "java/qorai-res/drawable/ic_expand_arrows.xml",
    "java/qorai-res/drawable/ic_eye_off.xml",
    "java/qorai-res/drawable/ic_eye_on.xml",
    "java/qorai-res/drawable/ic_fil_asset_icon.xml",
    "java/qorai-res/drawable/ic_filecoin_color.xml",
    "java/qorai-res/drawable/ic_following.xml",
    "java/qorai-res/drawable/ic_ftm_color.xml",
    "java/qorai-res/drawable/ic_guardian.xml",
    "java/qorai-res/drawable/ic_help.xml",
    "java/qorai-res/drawable/ic_help_filled.xml",
    "java/qorai-res/drawable/ic_home_screen_widget.xml",
    "java/qorai-res/drawable/ic_homepage.xml",
    "java/qorai-res/drawable/ic_idea.xml",
    "java/qorai-res/drawable/ic_info.xml",
    "java/qorai-res/drawable/ic_key.xml",
    "java/qorai-res/drawable/ic_languages.xml",
    "java/qorai-res/drawable/ic_laptop.xml",
    "java/qorai-res/drawable/ic_mask.xml",
    "java/qorai-res/drawable/ic_matic_color.xml",
    "java/qorai-res/drawable/ic_media.xml",
    "java/qorai-res/drawable/ic_menu.xml",
    "java/qorai-res/drawable/ic_menu_close.xml",
    "java/qorai-res/drawable/ic_message_bubble_comments.xml",
    "java/qorai-res/drawable/ic_metamask.xml",
    "java/qorai-res/drawable/ic_midnight_purple_circle.xml",
    "java/qorai-res/drawable/ic_neon_color.xml",
    "java/qorai-res/drawable/ic_new_tab_page.xml",
    "java/qorai-res/drawable/ic_news.xml",
    "java/qorai-res/drawable/ic_news_settings.xml",
    "java/qorai-res/drawable/ic_notification.xml",
    "java/qorai-res/drawable/ic_notification_icon.xml",
    "java/qorai-res/drawable/ic_onboarding_arrow_down.xml",
    "java/qorai-res/drawable/ic_onboarding_bg.xml",
    "java/qorai-res/drawable/ic_op_color.xml",
    "java/qorai-res/drawable/ic_p3a_checkbox.xml",
    "java/qorai-res/drawable/ic_p3a_checkbox_filled.xml",
    "java/qorai-res/drawable/ic_p3a_checkbox_outline.xml",
    "java/qorai-res/drawable/ic_pause_filled.xml",
    "java/qorai-res/drawable/ic_payment_methods.xml",
    "java/qorai-res/drawable/ic_phantom.xml",
    "java/qorai-res/drawable/ic_phone.xml",
    "java/qorai-res/drawable/ic_picture_in_picture.xml",
    "java/qorai-res/drawable/ic_plans.xml",
    "java/qorai-res/drawable/ic_popular_sources.xml",
    "java/qorai-res/drawable/ic_privacy_reports.xml",
    "java/qorai-res/drawable/ic_product_qoraiqora.xml",
    "java/qorai-res/drawable/ic_product_private_window.xml",
    "java/qorai-res/drawable/ic_product_vpn.xml",
    "java/qorai-res/drawable/ic_promoted.xml",
    "java/qorai-res/drawable/ic_qr_code.xml",
    "java/qorai-res/drawable/ic_qr_code_18.xml",
    "java/qorai-res/drawable/ic_rate.xml",
    "java/qorai-res/drawable/ic_rewards.xml",
    "java/qorai-res/drawable/ic_rocket.xml",
    "java/qorai-res/drawable/ic_search_21dp.xml",
    "java/qorai-res/drawable/ic_search_vector.xml",
    "java/qorai-res/drawable/ic_search_widget_promotion_icon.xml",
    "java/qorai-res/drawable/ic_settings.xml",
    "java/qorai-res/drawable/ic_settings_dapps.xml",
    "java/qorai-res/drawable/ic_share.xml",
    "java/qorai-res/drawable/ic_shield_done.xml",
    "java/qorai-res/drawable/ic_shield_done_filled.xml",
    "java/qorai-res/drawable/ic_shield_done_outlined.xml",
    "java/qorai-res/drawable/ic_site_settings.xml",
    "java/qorai-res/drawable/ic_smartphone.xml",
    "java/qorai-res/drawable/ic_sol_asset_icon.xml",
    "java/qorai-res/drawable/ic_sol_color.xml",
    "java/qorai-res/drawable/ic_stats_notification_background.xml",
    "java/qorai-res/drawable/ic_suggestions.xml",
    "java/qorai-res/drawable/ic_sync.xml",
    "java/qorai-res/drawable/ic_tablet.xml",
    "java/qorai-res/drawable/ic_thank_you.xml",
    "java/qorai-res/drawable/ic_tipping_error.xml",
    "java/qorai-res/drawable/ic_toggle_down.xml",
    "java/qorai-res/drawable/ic_toggle_up.xml",
    "java/qorai-res/drawable/ic_trash_icon.xml",
    "java/qorai-res/drawable/ic_visibility_off.xml",
    "java/qorai-res/drawable/ic_vpn.xml",
    "java/qorai-res/drawable/ic_vpn_always_on_1.xml",
    "java/qorai-res/drawable/ic_vpn_always_on_2.xml",
    "java/qorai-res/drawable/ic_vpn_always_on_3.xml",
    "java/qorai-res/drawable/ic_vpn_promo.xml",
    "java/qorai-res/drawable/ic_wallet_lock.xml",
    "java/qorai-res/drawable/ic_wallet_settings.xml",
    "java/qorai-res/drawable/ic_warning.xml",
    "java/qorai-res/drawable/ic_warning_circle.xml",
    "java/qorai-res/drawable/ic_warning_circle_filled.xml",
    "java/qorai-res/drawable/ic_warning_circle_filled2.xml",
    "java/qorai-res/drawable/ic_web.xml",
    "java/qorai-res/drawable/ic_widget_generic.xml",
    "java/qorai-res/drawable/ic_widget_generic_with_container.xml",
    "java/qorai-res/drawable/ic_youtube_skip_ads.xml",
    "java/qorai-res/drawable/ic_zec_color.xml",
    "java/qorai-res/drawable/image_credit_rounded_shape.xml",
    "java/qorai-res/drawable/learn_more_about_origin_bg.xml",
    "java/qorai-res/drawable/qora_plan_active_bg.xml",
    "java/qorai-res/drawable/qora_plan_non_active_bg.xml",
    "java/qorai-res/drawable/qora_plan_premium_adv_bg.xml",
    "java/qorai-res/drawable/qora_plan_upgrade_now_bg.xml",
    "java/qorai-res/drawable/qora_yearly_bg.xml",
    "java/qorai-res/drawable/modern_toolbar_background_grey_end_segment.xml",
    "java/qorai-res/drawable/modern_toolbar_background_grey_middle_segment.xml",
    "java/qorai-res/drawable/new_wallet.xml",
    "java/qorai-res/drawable/news_button_bg.xml",
    "java/qorai-res/drawable/news_settings_following_count_bg.xml",
    "java/qorai-res/drawable/notification_button_rounded_bg.xml",
    "java/qorai-res/drawable/notification_on_button_background.xml",
    "java/qorai-res/drawable/notification_rationale_dialog_background.xml",
    "java/qorai-res/drawable/onboarding_gradient_animation.xml",
    "java/qorai-res/drawable/onboarding_gradient_background_center.xml",
    "java/qorai-res/drawable/onboarding_gradient_background_end.xml",
    "java/qorai-res/drawable/onboarding_gradient_background_start.xml",
    "java/qorai-res/drawable/orange_rounded_button.xml",
    "java/qorai-res/drawable/origin_plan_active_bg.xml",
    "java/qorai-res/drawable/origin_plan_non_active_bg.xml",
    "java/qorai-res/drawable/origin_plan_upgrade_now_bg.xml",
    "java/qorai-res/drawable/password_match.xml",
    "java/qorai-res/drawable/private_tab_gradient_background.xml",
    "java/qorai-res/drawable/product_origin.xml",
    "java/qorai-res/drawable/product_private_layer_list.xml",
    "java/qorai-res/drawable/product_vpn_layer_list.xml",
    "java/qorai-res/drawable/progress_bar_medium.xml",
    "java/qorai-res/drawable/progress_bar_strong.xml",
    "java/qorai-res/drawable/progress_bar_weak.xml",
    "java/qorai-res/drawable/quick_action_search_and_bookmark_widget_bookmark_bg.xml",
    "java/qorai-res/drawable/rating_bottomsheet_background.xml",
    "java/qorai-res/drawable/rating_news_button_background.xml",
    "java/qorai-res/drawable/recovery_phrase_bg.xml",
    "java/qorai-res/drawable/rectangle_9.xml",
    "java/qorai-res/drawable/rectangle_selected_9.xml",
    "java/qorai-res/drawable/refresh_credentials_bg.xml",
    "java/qorai-res/drawable/refresh_credentials_origin_bg.xml",
    "java/qorai-res/drawable/restore_wallet.xml",
    "java/qorai-res/drawable/rewards_verified_tick_icon.xml",
    "java/qorai-res/drawable/rounded_bookmark_import_export_dialog_bg.xml",
    "java/qorai-res/drawable/rounded_dark_bg_alpha.xml",
    "java/qorai-res/drawable/rounded_dot_error_status.xml",
    "java/qorai-res/drawable/rounded_dot_success_status.xml",
    "java/qorai-res/drawable/rounded_filled.xml",
    "java/qorai-res/drawable/rounded_holo_button.xml",
    "java/qorai-res/drawable/rounded_onboarding_welcome_bg.xml",
    "java/qorai-res/drawable/rounded_set_default_top_corners.xml",
    "java/qorai-res/drawable/rounded_shape.xml",
    "java/qorai-res/drawable/rounded_top_corners.xml",
    "java/qorai-res/drawable/rounded_wallet_edittext.xml",
    "java/qorai-res/drawable/selected_dot.xml",
    "java/qorai-res/drawable/selected_indicator.xml",
    "java/qorai-res/drawable/set_default_rounded_button_disabled.xml",
    "java/qorai-res/drawable/shields_tooltip_background.xml",
    "java/qorai-res/drawable/stats_bottomsheet_background.xml",
    "java/qorai-res/drawable/stats_notification_on_button_bg.xml",
    "java/qorai-res/drawable/sync_code_countdown_bg.xml",
    "java/qorai-res/drawable/sync_code_expired_bg.xml",
    "java/qorai-res/drawable/tab_gradient_separator.xml",
    "java/qorai-res/drawable/timer_rounded_bottomsheet.xml",
    "java/qorai-res/drawable/transparent_bg_bordered.xml",
    "java/qorai-res/drawable/vpn_paywall_bg.xml",
    "java/qorai-res/drawable/vpn_paywall_selected_bg.xml",
    "java/qorai-res/drawable/vpn_plan_action_gradient.xml",
    "java/qorai-res/drawable/wallet_portfolio.xml",
    "java/qorai-res/drawable/wallet_sign_msg_err_bg.xml",
    "java/qorai-res/drawable/wallet_toolbar_panel_gradient_bg.xml",
    "java/qorai-res/drawable/wallet_top_banner_bg.xml",
    "java/qorai-res/drawable/warning_circle_filled.xml",
    "java/qorai-res/drawable/web_notification_small_icon_background.xml",
    "java/qorai-res/drawable/white_rounded_holo_button_thin.xml",
    "java/qorai-res/layout-land/activity_qorai_qora_plans.xml",
    "java/qorai-res/layout-land/activity_qorai_origin_plans.xml",
    "java/qorai-res/layout-land/activity_vpn_paywall.xml",
    "java/qorai-res/layout-land/qorai_shields_stats_row.xml",
    "java/qorai-res/layout-sw600dp-land/qorai_shields_stats_row.xml",
    "java/qorai-res/layout-sw600dp/qorai_shields_stats_row.xml",
    "java/qorai-res/layout/activity_account_selector.xml",
    "java/qorai-res/layout/activity_add_account.xml",
    "java/qorai-res/layout/activity_advance_tx_setting.xml",
    "java/qorai-res/layout/activity_auto_reconnect_vpn.xml",
    "java/qorai-res/layout/activity_qorai_qora_plans.xml",
    "java/qorai-res/layout/activity_qorai_origin_plans.xml",
    "java/qorai-res/layout/activity_qorai_vpn_profile.xml",
    "java/qorai-res/layout/activity_qorai_vpn_support.xml",
    "java/qorai-res/layout/activity_qorai_wallet.xml",
    "java/qorai-res/layout/activity_qorai_wallet_dapps.xml",
    "java/qorai-res/layout/activity_network_selector.xml",
    "java/qorai-res/layout/activity_onboarding.xml",
    "java/qorai-res/layout/activity_playlist_host.xml",
    "java/qorai-res/layout/activity_split_tunnel.xml",
    "java/qorai-res/layout/activity_vpn_paywall.xml",
    "java/qorai-res/layout/activity_vpn_server.xml",
    "java/qorai-res/layout/activity_vpn_server_selection.xml",
    "java/qorai-res/layout/activity_welcome_onboarding.xml",
    "java/qorai-res/layout/application_item_layout.xml",
    "java/qorai-res/layout/approve_tx_bottom_sheet.xml",
    "java/qorai-res/layout/auto_reconnect_vpn_tutorial_item_layout.xml",
    "java/qorai-res/layout/bottom_toolbar.xml",
    "java/qorai-res/layout/bottom_toolbar_browsing.xml",
    "java/qorai-res/layout/bottom_toolbar_menu_button.xml",
    "java/qorai-res/layout/bottom_toolbar_tab_switcher.xml",
    "java/qorai-res/layout/qorai_ads_custom_notification.xml",
    "java/qorai-res/layout/qorai_ads_custom_notification_dark.xml",
    "java/qorai-res/layout/qorai_ads_existing_user_dialog_layout.xml",
    "java/qorai-res/layout/qorai_ads_new_user_dialog_layout.xml",
    "java/qorai-res/layout/qorai_ask_play_store_rating_dialog.xml",
    "java/qorai-res/layout/qorai_autofill_service_item.xml",
    "java/qorai-res/layout/qorai_bookmark_toolbar.xml",
    "java/qorai-res/layout/qorai_bottom_new_tab_button.xml",
    "java/qorai-res/layout/qorai_custom_tabs_toolbar.xml",
    "java/qorai-res/layout/qorai_dialog_preference.xml",
    "java/qorai-res/layout/qorai_exit_confirmation.xml",
    "java/qorai-res/layout/qorai_homepage_mobile_bookmarks_button.xml",
    "java/qorai-res/layout/qorai_qora_clear_history_dialog.xml",
    "java/qorai-res/layout/qorai_qora_reset_dialog.xml",
    "java/qorai-res/layout/qorai_news_card_menu.xml",
    "java/qorai-res/layout/qorai_news_load_new_content.xml",
    "java/qorai-res/layout/qorai_news_no_sources.xml",
    "java/qorai-res/layout/qorai_news_row.xml",
    "java/qorai-res/layout/qorai_news_settings.xml",
    "java/qorai-res/layout/qorai_news_settings_details.xml",
    "java/qorai-res/layout/qorai_notification_permission_rationale_dialog.xml",
    "java/qorai-res/layout/qorai_notification_warning_dialog.xml",
    "java/qorai-res/layout/qorai_permission_prompt_dialog.xml",
    "java/qorai-res/layout/qorai_rating_dialog_fragment.xml",
    "java/qorai-res/layout/qorai_rating_news_layout.xml",
    "java/qorai-res/layout/qorai_rating_thanks_feedback_dialog.xml",
    "java/qorai-res/layout/qorai_shields_main_layout.xml",
    "java/qorai-res/layout/qorai_shields_option_layout.xml",
    "java/qorai-res/layout/qorai_shields_secondary_layout.xml",
    "java/qorai-res/layout/qorai_shields_stats_row.xml",
    "java/qorai-res/layout/qorai_shields_switcher.xml",
    "java/qorai-res/layout/qorai_shields_thank_you_layout.xml",
    "java/qorai-res/layout/qorai_shields_third_layout.xml",
    "java/qorai-res/layout/qorai_shields_toggle_layout.xml",
    "java/qorai-res/layout/qorai_shields_tooltip_layout.xml",
    "java/qorai-res/layout/qorai_stats_bottom_sheet.xml",
    "java/qorai-res/layout/qorai_stats_layout.xml",
    "java/qorai-res/layout/qorai_stats_notification_permission.xml",
    "java/qorai-res/layout/qorai_stats_pager_layout.xml",
    "java/qorai-res/layout/qorai_stats_share_layout.xml",
    "java/qorai-res/layout/qorai_sync_add_laptop.xml",
    "java/qorai-res/layout/qorai_sync_add_mobile.xml",
    "java/qorai-res/layout/qorai_sync_device.xml",
    "java/qorai-res/layout/qorai_sync_done.xml",
    "java/qorai-res/layout/qorai_sync_layout.xml",
    "java/qorai-res/layout/qorai_toolbar.xml",
    "java/qorai-res/layout/qorai_vpn_server_selection_item_layout.xml",
    "java/qorai-res/layout/qorai_wallet_accounts_list_item.xml",
    "java/qorai-res/layout/qorai_wallet_add_network.xml",
    "java/qorai-res/layout/qorai_wallet_autolock_layout.xml",
    "java/qorai-res/layout/qorai_wallet_connected_sites_list_item.xml",
    "java/qorai-res/layout/qorai_wallet_connected_sites_preference_layout.xml",
    "java/qorai-res/layout/qorai_wallet_edit_gas.xml",
    "java/qorai-res/layout/qorai_wallet_network_item.xml",
    "java/qorai-res/layout/qorai_wallet_network_label.xml",
    "java/qorai-res/layout/qorai_wallet_networks_preference_layout.xml",
    "java/qorai-res/layout/qorai_wallet_panel_layout.xml",
    "java/qorai-res/layout/qorai_wallet_preference_confirmation_text_layout.xml",
    "java/qorai-res/layout/qorai_wallet_reset_content.xml",
    "java/qorai-res/layout/qorai_wallet_toolbar.xml",
    "java/qorai-res/layout/qorai_webrtc_policy_preference.xml",
    "java/qorai-res/layout/custom_layout_preference.xml",
    "java/qorai-res/layout/dapps_dialog.xml",
    "java/qorai-res/layout/dialog_skip_onboarding.xml",
    "java/qorai-res/layout/fragment_ad_free_callout_dialog.xml",
    "java/qorai-res/layout/fragment_add_custom_filter_lists.xml",
    "java/qorai-res/layout/fragment_add_switch_ethereum_chain.xml",
    "java/qorai-res/layout/fragment_add_token.xml",
    "java/qorai-res/layout/fragment_backup_wallet.xml",
    "java/qorai-res/layout/fragment_qorai_ads_onboarding.xml",
    "java/qorai-res/layout/fragment_qorai_bookmark_import_export_dialog.xml",
    "java/qorai-res/layout/fragment_qorai_location_bar_qr_dialog.xml",
    "java/qorai-res/layout/fragment_qorai_multiwindow_dialog.xml",
    "java/qorai-res/layout/fragment_qorai_rewards_onboarding.xml",
    "java/qorai-res/layout/fragment_qorai_vpn_always_on_error_dialog.xml",
    "java/qorai-res/layout/fragment_qorai_vpn_confirm_dialog.xml",
    "java/qorai-res/layout/fragment_qorai_vpn_plan.xml",
    "java/qorai-res/layout/fragment_confirmation_wallet.xml",
    "java/qorai-res/layout/fragment_connect_account.xml",
    "java/qorai-res/layout/fragment_content_filtering.xml",
    "java/qorai-res/layout/fragment_create_account.xml",
    "java/qorai-res/layout/fragment_create_custom_filters.xml",
    "java/qorai-res/layout/fragment_creating_wallet.xml",
    "java/qorai-res/layout/fragment_dormant_users_engagement_dialog.xml",
    "java/qorai-res/layout/fragment_encryption_key.xml",
    "java/qorai-res/layout/fragment_fingerprint_unlock.xml",
    "java/qorai-res/layout/fragment_link_subscription_dialog.xml",
    "java/qorai-res/layout/fragment_onboarding_network_selection.xml",
    "java/qorai-res/layout/fragment_onboarding_v2.xml",
    "java/qorai-res/layout/fragment_open_yt_in_qorai_dialog.xml",
    "java/qorai-res/layout/fragment_qr_code_share.xml",
    "java/qorai-res/layout/fragment_recovery_phrase.xml",
    "java/qorai-res/layout/fragment_restore_wallet.xml",
    "java/qorai-res/layout/fragment_secure_password.xml",
    "java/qorai-res/layout/fragment_set_default_browser_bottom_sheet.xml",
    "java/qorai-res/layout/fragment_setup_wallet.xml",
    "java/qorai-res/layout/fragment_sign_message.xml",
    "java/qorai-res/layout/fragment_sign_message_error.xml",
    "java/qorai-res/layout/fragment_sign_tx_message.xml",
    "java/qorai-res/layout/fragment_siwe.xml",
    "java/qorai-res/layout/fragment_sync_code_countdown.xml",
    "java/qorai-res/layout/fragment_terms_of_use_wallet.xml",
    "java/qorai-res/layout/fragment_timer_dialog_list_dialog.xml",
    "java/qorai-res/layout/fragment_timer_dialog_list_dialog_item.xml",
    "java/qorai-res/layout/fragment_transaction.xml",
    "java/qorai-res/layout/fragment_transaction_details.xml",
    "java/qorai-res/layout/fragment_troubleshooting_onboarding.xml",
    "java/qorai-res/layout/fragment_two_line_item_list.xml",
    "java/qorai-res/layout/fragment_two_line_item_sheet.xml",
    "java/qorai-res/layout/fragment_unlock_wallet.xml",
    "java/qorai-res/layout/fragment_verify_recovery_phrase.xml",
    "java/qorai-res/layout/highlight_layout.xml",
    "java/qorai-res/layout/icon_row_menu_footer.xml",
    "java/qorai-res/layout/item_create_account.xml",
    "java/qorai-res/layout/item_custom_filter.xml",
    "java/qorai-res/layout/item_filter_list.xml",
    "java/qorai-res/layout/item_filter_title.xml",
    "java/qorai-res/layout/item_fragment_two_line_divider_item.xml",
    "java/qorai-res/layout/item_fragment_two_line_item.xml",
    "java/qorai-res/layout/item_fragment_two_line_single_text.xml",
    "java/qorai-res/layout/item_network_selector.xml",
    "java/qorai-res/layout/item_news_settings.xml",
    "java/qorai-res/layout/item_news_settings_section.xml",
    "java/qorai-res/layout/item_two_line_horizontal.xml",
    "java/qorai-res/layout/label_network_selector.xml",
    "java/qorai-res/layout/layout_search_widget_promo.xml",
    "java/qorai-res/layout/menu_separator.xml",
    "java/qorai-res/layout/network_spinner_items.xml",
    "java/qorai-res/layout/news_loading.xml",
    "java/qorai-res/layout/ntp_image_credit.xml",
    "java/qorai-res/layout/optin_layout.xml",
    "java/qorai-res/layout/password_no_result.xml",
    "java/qorai-res/layout/password_strength_meter_layout.xml",
    "java/qorai-res/layout/qa_code_check.xml",
    "java/qorai-res/layout/qa_command_line.xml",
    "java/qorai-res/layout/quick_action_search_and_bookmark_widget_layout.xml",
    "java/qorai-res/layout/radio_button_group_ddns_resolve_method_preference.xml",
    "java/qorai-res/layout/recovery_phrase_item_layout.xml",
    "java/qorai-res/layout/report_broken_site_layout.xml",
    "java/qorai-res/layout/report_broken_site_screenshot_view.xml",
    "java/qorai-res/layout/report_error_page_layout.xml",
    "java/qorai-res/layout/search_preference.xml",
    "java/qorai-res/layout/selected_network_item.xml",
    "java/qorai-res/layout/toolbar_space.xml",
    "java/qorai-res/layout/tracker_item_layout.xml",
    "java/qorai-res/layout/view_holder_account_selector.xml",
    "java/qorai-res/layout/view_holder_onboarding_header_network_selector.xml",
    "java/qorai-res/layout/view_holder_onboarding_network_selector.xml",
    "java/qorai-res/layout/vpn_location_menu_item_action_layout.xml",
    "java/qorai-res/layout/vpn_region_preference_layout.xml",
    "java/qorai-res/layout/vpn_server_item_layout.xml",
    "java/qorai-res/layout/vpn_settings_callout_modal_layout.xml",
    "java/qorai-res/layout/web_notification_icon_frame_qorai.xml",
    "java/qorai-res/layout/web_notification_small_icon.xml",
    "java/qorai-res/layout/widevine_permission_request_custom_view.xml",
    "java/qorai-res/layout/widget_bookmark_grid_item.xml",
    "java/qorai-res/menu/bookmark_tab_menu.xml",
    "java/qorai-res/menu/exit_settings_menu.xml",
    "java/qorai-res/menu/menu_qorai_news_settings_search.xml",
    "java/qorai-res/menu/menu_qorai_vpn.xml",
    "java/qorai-res/menu/menu_custom_filter_list.xml",
    "java/qorai-res/menu/menu_dapps_panel.xml",
    "java/qorai-res/menu/menu_network_selector.xml",
    "java/qorai-res/menu/new_tab_menu.xml",
    "java/qorai-res/menu/save_password_preferences_action_bar_menu.xml",
    "java/qorai-res/menu/split_tunnel_menu.xml",
    "java/qorai-res/menu/wallet_search.xml",
    "java/qorai-res/values-h500dp/dimens.xml",
    "java/qorai-res/values-h568dp/dimens.xml",
    "java/qorai-res/values-h748dp/dimens.xml",
    "java/qorai-res/values-h765dp/dimens.xml",
    "java/qorai-res/values-h820dp/dimens.xml",
    "java/qorai-res/values-v21/qorai_styles.xml",
    "java/qorai-res/values/array.xml",
    "java/qorai-res/values/qorai_attrs.xml",
    "java/qorai-res/values/qorai_ids.xml",
    "java/qorai-res/values/qorai_styles.xml",
    "java/qorai-res/values/shimmer_attrs.xml",
    "java/qorai-res/xml/background_images_preferences.xml",
    "java/qorai-res/xml/qorai_appearance_preferences.xml",
    "java/qorai-res/xml/qorai_download_preferences.xml",
    "java/qorai-res/xml/qorai_ethereum_preferences.xml",
    "java/qorai-res/xml/qorai_qora_default_model_preferences.xml",
    "java/qorai-res/xml/qorai_qora_preferences.xml",
    "java/qorai-res/xml/qorai_qora_radio_button_group_default_model_preference.xml",
    "java/qorai-res/xml/qorai_license_preferences.xml",
    "java/qorai-res/xml/qorai_main_preferences.xml",
    "java/qorai-res/xml/qorai_origin_preferences.xml",
    "java/qorai-res/xml/qorai_password_settings_preferences.xml",
    "java/qorai-res/xml/qorai_playlist_preferences.xml",
    "java/qorai-res/xml/qorai_privacy_preferences.xml",
    "java/qorai-res/xml/qorai_rewards_debug_preferences.xml",
    "java/qorai-res/xml/qorai_search_engines_preferences.xml",
    "java/qorai-res/xml/qorai_solana_preferences.xml",
    "java/qorai-res/xml/qorai_stats_preferences.xml",
    "java/qorai-res/xml/qorai_theme_preferences.xml",
    "java/qorai-res/xml/qorai_vpn_preferences.xml",
    "java/qorai-res/xml/qorai_wallet_networks_preference.xml",
    "java/qorai-res/xml/qorai_wallet_preferences.xml",
    "java/qorai-res/xml/qorai_webrtc_policy_preferences.xml",
    "java/qorai-res/xml/ens_preferences.xml",
    "java/qorai-res/xml/media_preferences.xml",
    "java/qorai-res/xml/qa_preferences.xml",
    "java/qorai-res/xml/quick_action_search_and_bookmark_widget_info.xml",
    "java/qorai-res/xml/sns_preferences.xml",
    "java/qorai-res/xml/unstoppable_domains_preferences.xml",
  ]
}
